# homepage

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  flake.nix  justfile  readme.md
assets/: .gitignore  tailwind.css
assets/styling/: loading_anim.css  main.css
src/: compressors.rs  lib.rs  main.rs  router.rs
src/apis/: geolocation.rs  ip.rs  mod.rs  weather.rs
src/views/: art.rs  contact.rs  gif_links.rs  info_widget.rs  mod.rs  navbar.rs  open_graph.rs  popup_widget.rs  projects.rs  scroll_bar.rs  socials.rs  under_construction.rs  who_am_i.rs
src/views/art_chapters/: ch1.rs  ch2.rs  ch3.rs  mod.rs  shared.rs
