[package]
name = "maty_homepage"
version = "0.1.0"
authors = ["matyniov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
dioxus = { version = "0.7.1", features = ["router", "html", "asset"] }
reqwest = {version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = ["HtmlAudioElement"]}

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 4
incremental = false
